# self-app

./: .env.example  .gitignore  CLAUDE.md  README.md  dev-tools.sh  dev-tools.test.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  self.sh  tsconfig.json
.github/workflows/: ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-21.md
_bmad-output/planning-artifacts/: epics.md  (+11 more)
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: agent.py  config.py  data_fetch.py  db.py  logging.py  main.py  modules.py  refresh.py  scheduler.py  sessions.py  task_manager.py
apps/backend/app/llm/: __init__.py  api_anthropic.py  api_deepseek.py  base.py  cli_claude.py  cli_codex.py  cli_kimi.py  rate_limiter.py
apps/backend/migrations/: 001_init.sql  002_session_pairing.sql  003_add_refresh_metadata.sql
apps/backend/tests/: conftest.py  test_agent.py  test_agent_edge.py  test_agent_module_edge.py  test_agent_soul_edge.py  test_config.py  test_config_edge_cases.py  test_data_fetch.py  test_db.py  test_db_edge_cases.py  test_health.py  test_health_edge_cases.py  test_llm.py  test_llm_edge_cases.py  test_llm_streaming.py  test_logging.py  test_logging_edge_cases.py  test_main_helpers.py  test_migration_schema.py  test_module_creation_e2e.py  test_module_creation_e2e_edge.py  test_module_schema.py  test_modules.py  test_modules_edge.py  test_persona.py  test_persona_edge.py  test_refresh.py  test_refresh_integration.py  test_scheduler.py  test_sessions.py  test_sessions_edge.py  test_soul.py  test_soul_edge.py  test_task_manager.py  test_ws.py  test_ws_auth.py  test_ws_auth_edge.py  test_ws_chat_edge.py
scripts/: dev.mjs
(+211 files in other folders)
