[project]
name = "self-app-backend"
version = "0.1.0"
description = "Self-app backend - AI-driven autonomous mobile app"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "aiosqlite>=0.21.0",
    "structlog>=25.1.0",
    "httpx>=0.28.0",
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "module-schema",
]

[tool.uv.sources]
module-schema = { path = "../../packages/module-schema/generated", editable = true }

[project.optional-dependencies]
dev = [
    "datamodel-code-generator",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
